# aoc2021

./: Cargo.toml  day14.js  day15.js  day16.js  day17.c
src/: days.rs  lib.rs
src/days/: day1.rs  day10.rs  day13.rs  day14.rs  day2.rs  day20.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
