[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools="0.10.1"
chrono = "0.4"
nalgebra = "0.29"
reqwest = { version="0.11.7", features = ["cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }